--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -86,7 +86,7 @@
             <mat-form-field>
               <mat-select placeholder="Select Intent" [(ngModel)]="update.newIntentId">
                 <mat-option *ngFor="let intent of state.currentIntents | async" [value]="intent._id">
-                  {{intent.name}}
+                  {{intent.intentLabel()}}
                 </mat-option>
                 <mat-option value="unknown">Unknown</mat-option>
               </mat-select>
