--- a/nlp/admin/web/src/app/nlp-admin-app.component.html
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.html
@@ -55,7 +55,7 @@
       </mat-option>
     </mat-select>
 
-    <button *ngIf="auth.isLoggedIn()" class="tock-icon-button" (click)="auth.logout()" matTooltip="Logout">
+    <button *ngIf="auth.isLoggedIn() && !auth.isSSO()" class="tock-icon-button" (click)="auth.logout()" matTooltip="Logout">
       <i class="material-icons tock-toolbar-menu">exit_to_app</i>
     </button>
 
