#357 does not display login page when sso activated
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
+++ b/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<mat-card class="">
+<mat-card *ngIf="displayLogin">
   <mat-card-title>Authentication</mat-card-title>
   <mat-card-content>
     <mat-spinner *ngIf="sendLogin" class="spinner"></mat-spinner>
