nlp admin - first cleanup of administration interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application-advanced-options/application-advanced-options.component.html
+++ b/nlp/admin/web/src/app/applications/application-advanced-options/application-advanced-options.component.html
@@ -23,7 +23,7 @@
     &nbsp;
     <button mat-raised-button (click)="triggerBuild()" color="accent">Trigger Build</button>
     &nbsp;
-    <button mat-raised-button (click)="displayConfiguration()" color="accent">Nlp Engine configuration</button>
+    <button mat-raised-button (click)="displayConfiguration()" color="accent">NLU Engine configuration</button>
     &nbsp;
     <button mat-raised-button (click)="exportAlexa = true" color="accent">Alexa Export</button>
   </div>
