resolves #397 admin: filter test dialogs
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/monitoring/dialogs/dialogs.component.html
+++ b/bot/admin/web/src/app/monitoring/dialogs/dialogs.component.html
@@ -40,6 +40,8 @@
           <mat-option value="unknown">Unknown</mat-option>
         </mat-select>
       </mat-form-field>
+      &nbsp;
+      <mat-slide-toggle class="test" [(ngModel)]="filter.displayTests" (change)="waitAndRefresh()">Display tests</mat-slide-toggle>
       <button mat-button (click)="refresh()">GO</button>
     </mat-card-content>
   </mat-card>
