resolves #411 nlp admin: disallow empty value and to have same value twice
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -69,7 +69,7 @@
           <tr *ngFor="let predefinedValue of selectedEntityType.predefinedValues">
             <td>
               <mat-form-field>
-                <input matInput #pv [(value)]="predefinedValue.value" (selectionChange)="updatePredefinedValueName(predefinedValue, pv.value)">
+                <input matInput #pv [(value)]="predefinedValue.value" (blur)="updatePredefinedValueName(predefinedValue, pv)">
               </mat-form-field>
             </td>
             <td>
