--- a/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
+++ b/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
@@ -15,7 +15,7 @@
   -->
 
 <div *ngIf="configurations && configurations.length === 0">
-  <h3>No bot configuration detected.</h3>
+  No bot configuration detected &nbsp;
 </div>
 <div *ngIf="configurations && configurations.length !== 0">
   <mat-form-field class="select-configuration">
