--- a/nlp/admin/web/src/app/sentence-analysis/intent-dialog/intent-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/intent-dialog/intent-dialog.component.html
@@ -20,7 +20,7 @@
   <form #intentForm="ngForm" class="container">
     <mat-form-field>
       <input matInput name="label" placeholder="Label" [(ngModel)]="label" (keyup)="copyToName()" (keyup.enter)="save()"
-             matTooltip="Displayed label">
+             matTooltip="Displayed label" #labelElement>
     </mat-form-field>
     <mat-form-field>
       <input [disabled]="!create" matInput name="name" placeholder="Name" [(ngModel)]="name" (keyup)="format()" (keyup.enter)="save()"
