resolves #450 nlp admin: coming from test quality add the ability to filter by status
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -15,7 +15,7 @@
   -->
 
 <div class="search">
-  <tock-sentences-scroll [filter]="filter" title="" [displayStatus]="true"
+  <tock-sentences-scroll [filter]="filter" title="" [displayStatus]="true" [loadOnInit]="false"
                          (selectedSentences)="selectedSentences = $event">
     <mat-card>
       <mat-card-content>
