#449 finalize mandatory entities v1
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story.component.html
@@ -31,7 +31,7 @@
       <br>
       <div *ngIf="story" class="separator"></div>
       <div *ngIf="story">
-        <tock-story [story]="story" [fullDisplay]="true"></tock-story>
+        <tock-story class="story" [story]="story" [fullDisplay]="true"></tock-story>
       </div>
     </tock-select-bot>
     <mat-card-actions *ngIf="story" class="actions">
