--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
@@ -50,5 +50,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="dialogRef.close('cancel')">Cancel</button>
-  <button mat-button (click)="save()">Create</button>
+  <button mat-button (click)="save()">Add</button>
 </div>
