--- a/bot/admin/web/src/app/bot/story/answer.component.html
+++ b/bot/admin/web/src/app/bot/story/answer.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="answer && answer.currentAnswer()">
+<div *ngIf="answer && answer.currentAnswer()" class="answer-container">
   <div *ngIf="!fullDisplay">
     <span class="simple">{{answer.simpleTextView()}}</span>
-    <button mat-icon-button color="primary" matTooltip="Edit Answer" (click)="editAnswer()">
+    <button *ngIf="editable" mat-icon-button color="primary" matTooltip="Edit Answer" (click)="editAnswer()">
       <mat-icon>question_answer</mat-icon>
     </button>
   </div>
