--- a/nlp/admin/web/src/app/sentence-analysis/intent-dialog/intent-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/intent-dialog/intent-dialog.component.html
@@ -29,7 +29,7 @@
     </mat-form-field>
     <mat-form-field>
       <input matInput name="category" placeholder="Category" [(ngModel)]="category"
-             matTooltip="Category" (keyup)="categoryChange()"
+             matTooltip="Category" (keyup)="categoryChange()" (focus)="categoryChange()"
              [matAutocomplete]="catAuto">
     </mat-form-field>
     <mat-autocomplete #catAuto="matAutocomplete">
